@@ -4,16 +4,19 @@ import com.comphenix.protocol.ProtocolLibrary;
 import com.comphenix.protocol.ProtocolManager;
 import org.bukkit.Bukkit;
 import org.bukkit.World;
-import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.File;
-import java.util.ArrayList;
+import java.util.logging.Logger;
 
 public final class Iter extends JavaPlugin {
 
     @Override
     public void onEnable() {
+        // Register custom events
+
+
+
         ProtocolManager protocolManager = ProtocolLibrary.getProtocolManager();
         plugin = this;
         pluginFolder = getDataFolder();
@@ -23,16 +26,18 @@ public final class Iter extends JavaPlugin {
 
         SetupManager.registerCommands();
     }
-    public static final World defaultWorld = Bukkit.getWorlds().get(0);
+    public static final World defaultWorld = Bukkit.getWorlds().getFirst();
     public static File pluginFolder;
 
     @Override
     public void onDisable() {
         while (!GameManager.games.isEmpty()) {
-            GameManager.stopGame(GameManager.games.get(0));
+            GameManager.stopGame(GameManager.games.getFirst());
+
         }
     }
 
 
+    public static Logger logger = Logger.getLogger("Iter");
     public static Iter plugin;
 }
